--- a/index.html
+++ b/index.html
@@ -12,61 +12,323 @@
       href="https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <script src="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js
+"></script>
+<link href="
+https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
+" rel="stylesheet">
   </head>
   <body>
-    <div>
-      <!-- nav-bar -->
-      <nav class="container mx-auto flex justify-between p-8">
-        <div>
-          <img src="images/stpeters2Img 1.png" alt="" />
-        </div>
-        <div class="flex gap-4 text-[#214169]">
-          <a class="hover:text-blue-500" href="#">Home</a>
-          <a class="hover:text-blue-500" href="#">Value</a>
-          <a class="hover:text-blue-500" href="#">About</a>
-          <a class="hover:text-blue-500" href="#">Services</a>
-          <a class="hover:text-blue-500" href="#">Contact</a>
-        </div>
+    <!-- nav-bar -->
+    <nav class="container mx-auto block flex justify-between p-8">
+      <div>
+        <img src="images/stpeters2Img 1.png" alt="" />
+      </div>
+      <div class="flex gap-4 text-[#214169]">
+        <a class="hover:text-blue-500" href="#">Home</a>
+        <a class="hover:text-blue-500" href="#">Value</a>
+        <a class="hover:text-blue-500" href="#">About</a>
+        <a class="hover:text-blue-500" href="#">Services</a>
+        <a class="hover:text-blue-500" href="#">Contact</a>
+      </div>
+      <a href="#">
+        <button
+          class="border-none rounded-3xl p-2 bg-[#F6075F] text-white w-34"
+        >
+          Book Now
+        </button>
+      </a>
+    </nav>
+    <!-- end of nav-bar -->
+
+    <!-- hero-section -->
+    <div
+      class="h-[80vh] container mx-auto flex bg-gradient-to-tr from-[#82D3FF] from-0% via-[#B6F8FF] via-49% to-[#61ADF8] to-100%"
+    >
+      <div class="self-center p-12">
+        <h1
+          class="amaranth-bold block font-bold text-[80px] w-[800px] leading-20 text-[#214169]"
+        >
+          Your Partner in Eye Care & Glasses
+        </h1>
+        <p class="font-normal text-xl leading-6 mt-8 w-[520px] text-[16px]">
+          We are committed to providing you with the best eye care and glasses
+          services to help your eye live healthier and happier.
+        </p>
         <a href="#">
-          <button class="border rounded-3xl p-2 bg-[#F6075F] text-white w-34">
-            Book Now
+          <button
+            class="border-none rounded-3xl p-2 bg-[#F6075F] text-white w-[187px] mt-8"
+          >
+            Book A Session
           </button>
         </a>
-      </nav>
-      <!-- end of nav-bar -->
-
-      <!-- hero-section -->
-      <div
-        class="h-[80vh] container mx-auto flex bg-gradient-to-tr from-[#82D3FF] from-0% via-[#B6F8FF] via-49% to-[#61ADF8] to-100%"
-      >
-        <div class="self-center p-12">
-          <h1
-            class="amaranth-bold font-bold text-[80px] w-[800px] leading-20 text-[#214169]"
-          >
-            Your Partner in Eye Care & Glasses
-          </h1>
-          <p class="font-normal text-xl leading-6 mt-8 w-[520px]">
-            We are committed to providing you with the best eye care and glasses
-            services to help your eye live healthier and happier.
-          </p>
-          <a href="#">
-            <button class="border rounded-3xl p-2 bg-[#F6075F] text-white w-[187px] mt-8">Book A Session</button>
-          </a>
-        </div>
-        <div>
+      </div>
+      <!-- 2nd child -->
+      <div class="relative self-end">
+        <div class="">
           <img src="images/rtrydtf 1.png" alt="" />
-          <div class="flex border border-[#FFFFFF91]">
-            <div>
-              <img src="images/Find Clinic.png" alt="" />
-            </div>
-            <div class="">
-              <h1>Find the best Doctor</h1>
-              <span>Top Best Hospital</span>
-            </div>
+        </div>
+        <div
+          class="flex border-none rounded-3xl bg-[#FFFFFF91] max-w-3xs px-2 absolute top-70 -left-32"
+        >
+          <div>
+            <img class="w-[46px]" src="images/Find Clinic.png" alt="" />
+          </div>
+          <div class="">
+            <h3 class="font-bold text-lg">Find the best Doctor</h3>
+            <span class="text-xs font-normal">Top Best Hospital</span>
           </div>
         </div>
       </div>
-      <!-- end of hero-section -->
+      <!-- end of 2nd chid -->
     </div>
+    <!-- end of hero-section -->
+
+    <!-- value-section -->
+    <div class="container mx-auto">
+      <h1
+        class="text-center amaranth-bold text-[#F6075F] font-normal text-6xl mt-20"
+      >
+        Our Values
+      </h1>
+      <!-- second-child -->
+      <div class="flex justify-between mt-20 gap-16 items-center">
+        <!-- first-child -->
+        <div class="shadow-xl p-12 rounded-3xl">
+          <div class="flex gap-4 items-center m-8">
+            <div>
+              <img
+                class="bg-blue-500 rounded-2xl"
+                src="images/Trust.png"
+                alt=""
+              />
+            </div>
+            <p class="text-[#F6075F] font-semibold text-3xl">Compassion</p>
+          </div>
+          <p class="text-base font-9xl leading-[17.54px]">
+            We believe in treating every patient with kindness and empathy,
+            listening to their concerns, and supporting them through each step
+            of their journey.
+          </p>
+        </div>
+        <!-- end of first-child -->
+        <!-- second-child -->
+        <div class="shadow-xl p-12 rounded-3xl">
+          <div class="flex gap-4 items-center m-8">
+            <div>
+              <img
+                class="bg-blue-500 rounded-2xl"
+                src="images/Ellipse 3.png"
+                alt=""
+              />
+            </div>
+            <p class="text-[#F6075F] font-semibold text-3xl">Compassion</p>
+          </div>
+          <p class="text-base font-lg leading-[17.54px]">
+            We believe in treating every patient with kindness and empathy,
+            listening to their concerns, and supporting them through each step
+            of their journey.
+          </p>
+        </div>
+        <!-- end of second-child -->
+        <!-- third-child -->
+        <div class="shadow-xl p-12 rounded-3xl">
+          <div class="flex gap-4 items-center m-8">
+            <div>
+              <img
+                class="bg-blue-500 rounded-2xl"
+                src="images/Handshake.png"
+                alt=""
+              />
+            </div>
+            <p class="text-[#F6075F] font-semibold text-3xl">Integrity</p>
+          </div>
+          <p class="text-base font-lg leading-[17.54px]">
+            We believe in treating every patient with kindness and empathy,
+            listening to their concerns, and supporting them through each step
+            of their journey.
+          </p>
+        </div>
+        <!-- end of third-child -->
+      </div>
+    </div>
+    <!-- end of value-section -->
+    <!-- About-section -->
+    <div class="container mx-auto flex gap-16 mt-24 items-center">
+      <!-- first-child -->
+      <div>
+        <img src="images/image 6(1).png" alt="" />
+      </div>
+      <!-- second-child -->
+      <div class="w-100">
+        <h1 class="text-[#F6075F] text-[64px]">About Us</h1>
+        <p class="text-[#61ADF8] amaranth-regular-italic">BrightLens</p>
+        <h3 class="text-[#214169] text-[28px]">
+          Welcome to CareNest, a dedicated healthcare provider
+        </h3>
+        <p class="font-normal text-[16px]">
+          At CareNest, we believe in delivering more than just medical services;
+          we’re here to create a supportive, healing environment where patients
+          and families feel valued and understood.
+        </p>
+      </div>
+    </div>
+    <!-- end of about-section -->
+
+    <!-- service-section -->
+    <div class="container mx-auto mt-24">
+      <div
+        class="border-none flex bg-[#82D3FFE8] rounded-[35px] py-[20] justify-center items-center"
+      >
+        <h1 class="amaranth-bold text-[80px] text-[#F6075F]">Services</h1>
+      </div>
+      <!-- second-child -->
+      <div class="grid grid-cols-6 gap-4 mt-20">
+        <div class="shadow-xl p-12 rounded-3xl items-center">
+          <div>
+            <img src="images/Siren.png" alt="" />
+          </div>
+          <p class="text-[#214169]">Comprehensive Eye Examination</p>
+        </div>
+        <div class="shadow-xl p-12 rounded-3xl items-center">
+          <div>
+            <img src="images/Siren.png" alt="" />
+          </div>
+          <p class="text-[#214169]">Screening & Outreach Services</p>
+        </div>
+        <div class="shadow-xl p-12 rounded-3xl items-center">
+          <div>
+            <img src="images/Siren.png" alt="" />
+          </div>
+          <p class="text-[#214169]">Management & Treatment of Eye Conditions</p>
+        </div>
+        <div class="shadow-xl p-12 rounded-3xl items-center">
+          <div>
+            <img src="images/Siren.png" alt="" />
+          </div>
+          <p class="text-[#214169]">
+            Dispensing of Frames, Lens & Contact Lens
+          </p>
+        </div>
+        <div class="shadow-xl p-12 rounded-3xl items-center">
+          <div>
+            <img src="images/Siren.png" alt="" />
+          </div>
+          <p class="text-[#214169]">Refraction & DVLA Test</p>
+        </div>
+        <div class="shadow-xl p-12 rounded-3xl items-center">
+          <div>
+            <img src="images/Siren.png" alt="" />
+          </div>
+          <p class="text-[#214169]">Home & Corporate Services</p>
+        </div>
+      </div>
+    </div>
+    <!-- end of service-section -->
+
+    <!-- book-a-session -->
+    <div
+      class="container mx-auto flex mt-24 bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
+    >
+      <!-- first-child -->
+      <div class="w-[765px]">
+        <img
+          src="images/32844d82-7977-4c85-a287-79886179d506_removalai_preview 1.png"
+          alt=""
+        />
+      </div>
+      <!-- end-of-first-child -->
+      <!-- second-child -->
+      <div></div>
+      <!-- end-of second-child -->
+    </div>
+    <!-- end-of-book-session -->
+    <!-- find us section -->
+    <div class="container mx-auto mt-24 amaranth-bold">
+      <h1 class="text-[#F6075F] text-[64px]">Find Us Here</h1>
+      <div class="flex justify-between mt-8">
+        <div
+          class="flex gap-4 w-70 border border-[#61ADF8] items-center justify-center p-2 rounded-lg"
+        >
+          <div>
+            <img src="images/Phone.png" alt="" />
+          </div>
+          <p class="text-[#61ADF8]">031 000 0 000</p>
+        </div>
+        <div
+          class="flex gap-4 w-70 border border-[#61ADF8] items-center justify-center p-2 rounded-lg"
+        >
+          <div>
+            <img src="images/Letter.png" alt="" />
+          </div>
+          <p class="text-[#61ADF8]">carenest@gmail.com</p>
+        </div>
+        <div
+          class="flex gap-4 w-70 border border-[#61ADF8] items-center justify-center p-2 rounded-lg"
+        >
+          <div>
+            <img src="images/Location(1).png" alt="" />
+          </div>
+          <p class="text-[#61ADF8]">07, East Legon</p>
+        </div>
+      </div>
+      <div class="mt-20 flex items-center justify-center">
+        <iframe class="w-[1246px] h-[505] rounded-3xl"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15882.11339387063!2d-0.16861531725522427!3d5.6364025136193945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9b501278f4a5%3A0xca081548a0c20ffd!2sEast%20Legon%2C%20Accra!5e0!3m2!1sen!2sgh!4v1738187546425!5m2!1sen!2sgh"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </div>
+    <!-- end of find-us-section -->
+
+    <!-- upcoming-section -->
+     <div class="container mx-auto mt-20">
+      <h3 class="amaranth-bold text-[#F6075F] text-[64px]">Upcoming event</h3>
+      <section class="splide" aria-label="Splide Basic HTML Example">
+        <div class="splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide">
+              <img src="images/WhatsApp Image 2025-01-26 at 18.20.28_cb682f91 1.png" alt="">
+            </li>
+            <li class="splide__slide">
+              <img src="images/WhatsApp Image 2025-01-26 at 18.20.28_cb682f91 1.png" alt="">
+            </li>
+            <li class="splide__slide">
+              <img src="images/WhatsApp Image 2025-01-26 at 18.20.50_8edbd95f 1.png" alt="">
+
+            </li>
+            <li class="splide__slide">
+              <img src="images/WhatsApp Image 2025-01-26 at 18.20.50_8edbd95f 1.png" alt="">
+
+            </li>
+            <li class="splide__slide">
+              <img src="images/WhatsApp Image 2025-01-26 at 18.20.50_8edbd95f 1.png" alt="">
+
+            </li>
+            <li class="splide__slide">
+              <img src="images/WhatsApp Image 2025-01-26 at 18.20.50_8edbd95f 1.png" alt="">
+
+            </li>
+          </ul>
+        </div>
+      </section>
+     </div>
+     <!-- end of upcoming-section -->
+
+     <script>
+      new Splide( '.splide', 
+      {
+  type   : 'loop',
+  perPage: 3,
+  gap: 20,
+} 
+      ).mount();
+    </script>
   </body>
 </html>
