made some changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
   </head>
   <body>
     <!-- nav-bar -->
-    <nav class="container mx-auto  flex justify-between p-8">
+    <nav class="container mx-auto flex justify-between p-8">
       <div>
         <img src="images/stpeters2Img 1.png" alt="" />
       </div>
@@ -43,7 +43,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
           Book Now
         </button>
         <div class="md:hidden">
-          <img src="images/Menu.png" alt="">
+          <img src="images/Menu.png" alt="" />
         </div>
       </a>
     </nav>
@@ -51,15 +51,19 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
 
     <!-- hero-section -->
     <div
-      class="container mx-auto flex md:flex-row flex-col  bg-gradient-to-tr from-[#82D3FF] from-0% via-[#B6F8FF] via-49% to-[#61ADF8] to-100%"
+      class="container mx-auto flex md:flex-row flex-col bg-gradient-to-tr from-[#82D3FF] from-0% via-[#B6F8FF] via-49% to-[#61ADF8] to-100%"
     >
-      <div class="md:block self-center p-12 w-full md:flex-1 flex flex-col justify-center items-center">
+      <div
+        class="md:block self-center p-12 w-full md:flex-1 flex flex-col justify-center items-center"
+      >
         <h1
           class="amaranth-bold md:font-bold md:text-[50px] md:text-start text-center md:leading-12 text-[#214169] text-[32px] md:w-full text-center"
         >
           Your Partner in Eye Care & Glasses
         </h1>
-        <p class="font-normal md:text-xl leading-6 md:mt-8 w-[520px] text-[16px] text-sm text-center w-full md:text-start">
+        <p
+          class="font-normal md:text-xl leading-6 md:mt-8 w-[520px] text-[16px] text-sm text-center w-full md:text-start"
+        >
           We are committed to providing you with the best eye care and glasses
           services to help your eye live healthier and happier.
         </p>
@@ -73,8 +77,8 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
       </div>
       <!-- 2nd child -->
       <div>
-        <div class="flex-1 overflow-hidden px-5 md:px-0 ">
-          <img src="images/Group 237.png" alt="">
+        <div class="flex-1 overflow-hidden px-5 md:px-0">
+          <img src="images/Group 237.png" alt="" />
         </div>
       </div>
       <!-- end of 2nd chid -->
@@ -89,10 +93,14 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
         Our Values
       </h1>
       <!-- second-child -->
-      <div class="flex md:justify-between md:mt-20 md:gap-12 items-center md:flex-row flex-col p-8 gap-5 md:p-0 ">
+      <div
+        class="flex md:justify-between md:mt-20 md:gap-12 items-center md:flex-row flex-col p-8 gap-5 md:p-0"
+      >
         <!-- first-child -->
-        <div class="shadow-xl md:p-12 rounded-3xl p-4">
-          <div class="flex gap-4 items-center md:m-8 justify-center md:justify-start m-3">
+        <div class="shadow-xl md:p-12 rounded-3xl p-8">
+          <div
+            class="flex gap-4 items-center md:m-8 justify-center md:justify-start m-3"
+          >
             <div>
               <img
                 class="bg-blue-500 rounded-2xl"
@@ -100,9 +108,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
                 alt=""
               />
             </div>
-            <p class="text-[#F6075F] font-semibold text-3xl text-center">Excellence</p>
+            <p class="text-[#F6075F] font-semibold text-3xl text-center">
+              Excellence
+            </p>
           </div>
-          <p class="text-base font-9xl leading-[17.54px] text-center">
+          <p
+            class="text-base md:font-9xl md:leading-[17.54px] text-center text-[12px]"
+          >
             We believe in treating every patient with kindness and empathy,
             listening to their concerns, and supporting them through each step
             of their journey.
@@ -110,8 +122,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
         </div>
         <!-- end of first-child -->
         <!-- second-child -->
-        <div class="shadow-xl md:p-12 rounded-3xl p-4">
-          <div class="flex gap-4 items-center md:m-8 justify-center md:justify-start m-3">
+        <div class="shadow-xl md:p-12 rounded-3xl p-8">
+          <div
+            class="flex gap-4 items-center md:m-8 justify-center md:justify-start m-3"
+          >
             <div>
               <img
                 class="bg-blue-500 rounded-2xl"
@@ -119,18 +133,24 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
                 alt=""
               />
             </div>
-            <p class="text-[#F6075F] font-semibold text-3xl text-center">Compassion</p>
+            <p class="text-[#F6075F] font-semibold text-3xl text-center">
+              Compassion
+            </p>
           </div>
-          <p class="text-base font-lg leading-[17.54px] text-center">
-            We believe in treating every patient with kindness and empathy,
-            listening to their concerns, and supporting them through each step
-            of their journey.
+          <p
+            class="text-base md:font-lg md:leading-[17.54px] text-center text-[12px]"
+          >
+            We are committed to treating everyone with warmth and compassion,
+            understanding their concerns, and walking with them through every
+            stage of their journey.
           </p>
         </div>
         <!-- end of second-child -->
         <!-- third-child -->
-        <div class="shadow-xl md:p-12 rounded-3xl p-4">
-          <div class="flex gap-4 items-center md:m-8 justify-center md:justify-start m-3">
+        <div class="shadow-xl md:p-12 rounded-3xl p-8">
+          <div
+            class="flex gap-4 items-center md:m-8 justify-center md:justify-start m-3"
+          >
             <div>
               <img
                 class="bg-blue-500 rounded-2xl"
@@ -138,12 +158,16 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
                 alt=""
               />
             </div>
-            <p class="text-[#F6075F] font-semibold text-3xl text-center">Integrity</p>
+            <p class="text-[#F6075F] font-semibold text-3xl text-center">
+              Integrity
+            </p>
           </div>
-          <p class="text-base font-lg leading-[17.54px] text-center">
-            We believe in treating every patient with kindness and empathy,
-            listening to their concerns, and supporting them through each step
-            of their journey.
+          <p
+            class="text-base md:font-lg md:leading-[17.54px] text-center text-[12px]"
+          >
+            We strive to bring compassion and empathy into every interaction,
+            ensuring each person feels heard, valued, and supported on their
+            journey.
           </p>
         </div>
         <!-- end of third-child -->
@@ -151,7 +175,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     </div>
     <!-- end of value-section -->
     <!-- About-section -->
-    <div class="container mx-auto flex md:flex-row flex-col md:gap-16 md:mt-24 items-center">
+    <div
+      class="container mx-auto flex md:flex-row flex-col md:gap-16 md:mt-24 items-center"
+    >
       <!-- first-child -->
       <div class="md:p-0 p-10">
         <img src="images/image 6(1).png" alt="" />
@@ -177,53 +203,61 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
       <div
         class="border-none flex bg-[#82D3FFE8] rounded-[35px] md:py-[20] justify-center items-center"
       >
-        <h1 class="amaranth-bold md:text-[80px] text-[#F6075F] text-[45px]">Services</h1>
+        <h1 class="amaranth-bold md:text-[80px] text-[#F6075F] text-[45px]">
+          Services
+        </h1>
       </div>
       <!-- second-child -->
-      <div class="grid md:grid-cols-3 lg:6 md:gap-4 md:mt-20 grid-cols-2 mt-10 gap-5">
-        <div class="shadow-xl md:p-12 rounded-3xl">
+      <div
+        class="grid md:grid-cols-3 lg:grid-cols-6 md:gap-4 md:mt-20 grid-cols-2 mt-10 gap-5"
+      >
+        <div class="shadow-xl md:p-12 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center px-2">
+          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
             Comprehensive Eye Examination
           </p>
         </div>
-        <div class="shadow-xl md:p-12 rounded-3xl">
+        <div class="shadow-xl md:p-12 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center px-2">
+          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
             Screening & Outreach Services
           </p>
         </div>
-        <div class="shadow-xl md:p-12 rounded-3xl">
+        <div class="shadow-xl md:p-12 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center px-2">
+          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
             Management & Treatment of Eye Conditions
           </p>
         </div>
-        <div class="shadow-xl md:p-12 rounded-3xl">
+        <div class="shadow-xl md:p-12 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center px-2">
+          <p class="text-[#214169] text-center md:px-2 text-[12px] rounded p-8">
             Dispensing of Frames, Lens & Contact Lens
           </p>
         </div>
-        <div class="shadow-xl md:p-12 rounded-3xl">
+        <div class="shadow-xl md:p-12 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center px-2">Refraction & DVLA Test</p>
+          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
+            Refraction & DVLA Test
+          </p>
         </div>
-        <div class="shadow-xl md:p-12 rounded-3xl">
+        <div class="shadow-xl md:p-12 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center px-2">Home & Corporate Services</p>
+          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
+            Home & Corporate Services
+          </p>
         </div>
       </div>
     </div>
@@ -234,7 +268,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
       class="container mx-auto flex md:mt-24 md:p-5 mt-10 bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
     >
       <!-- first-child -->
-      <div class="md:self-end hidden">
+      <div class="md:self-end md:block hidden">
         <img
           src="images/32844d82-7977-4c85-a287-79886179d506_removalai_preview 1.png"
           alt=""
@@ -244,34 +278,56 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
       <!-- second-child -->
       <div class="md:py-10 p-12">
         <p class="text-[20px] text-[#61ADF8]">Talk to us</p>
-        <h3 class="amaranth-bold md:text-[64px] text-[#F6075F] text-[35px]">Book A Session</h3>
+        <h3 class="amaranth-bold md:text-[64px] text-[#F6075F] text-[35px]">
+          Book A Session
+        </h3>
         <!-- form -->
         <form action="">
           <div class="flex gap-4 md:m-4 md:flex-row flex-col">
             <div class="flex-1">
-              <label class="text-[#214169]" for="">Name</label><br>
-              <input class="border rounded-lg  border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%" type="text" />
+              <label class="text-[#214169]" for="">Name</label><br />
+              <input
+                class="border rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
+                type="text"
+              />
             </div>
             <div class="flex-1">
               <label class="text-[#214169]" for="">Phone Number</label>
-              <input class="border rounded-lg  border-black  w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%" type="text" />
+              <input
+                class="border rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
+                type="text"
+              />
             </div>
           </div>
           <div class="md:m-4 mt-4">
-            <label class="text-[#214169]" for="">Service</label><br>
-            <input class="border rounded-lg  border-black  w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100% " type="text"  type="text">
+            <label class="text-[#214169]" for="">Service</label><br />
+            <input
+              class="border rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
+              type="text"
+              type="text"
+            />
           </div>
           <div class="flex gap-4 md:m-4 mt-4">
             <div class="flex-1">
-              <label class="text-[#214169]" for="">Preferred Date</label><br>
-              <input class="border rounded-lg  border-black  w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%" type="text" />
+              <label class="text-[#214169]" for="">Preferred Date</label><br />
+              <input
+                class="border rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
+                type="text"
+              />
             </div>
             <div class="flex-1">
               <label class="text-[#214169]" for="">Preferred Time</label>
-              <input class="border rounded-lg  border-black  w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%" type="text" />
+              <input
+                class="border rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
+                type="text"
+              />
             </div>
           </div>
-          <button class="border-none rounded-3xl p-3 md:m-4 border-black mt-8 w-full bg-[#61ADF8] text-white">Book Now</button>
+          <button
+            class="border-none rounded-3xl p-3 md:m-4 border-black mt-8 w-full bg-[#61ADF8] text-white"
+          >
+            Book Now
+          </button>
         </form>
         <!-- end of form -->
       </div>
@@ -280,8 +336,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     <!-- end-of-book-session -->
     <!-- find us section -->
     <div class="container mx-auto md:mt-24 md:mt-8 amaranth-bold mt-8">
-      <h1 class="text-[#F6075F] md:text-[64px] text-[40px] text-center">Find Us Here</h1>
-      <div class="flex md:justify-between md:mt-8 md:flex-row flex-col gap-4 p-12">
+      <h1 class="text-[#F6075F] md:text-[64px] text-[40px] text-center">
+        Find Us Here
+      </h1>
+      <div
+        class="flex md:justify-between md:mt-8 md:flex-row flex-col gap-4 p-12"
+      >
         <div
           class="flex gap-4 md:w-70 border border-[#61ADF8] items-center justify-center p-2 rounded-lg"
         >
@@ -324,7 +384,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
 
     <!-- upcoming-section -->
     <div class="container mx-auto md:mt-20">
-      <h3 class="amaranth-bold text-[#F6075F] md:text-[64px] text-[40px] p-12 md:mb-8">
+      <h3
+        class="amaranth-bold text-[#F6075F] md:text-[64px] text-[40px] p-12 md:mb-8"
+      >
         Upcoming event
       </h3>
       <section class="splide mb-4" aria-label="Splide Basic HTML Example">
@@ -376,7 +438,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     <footer
       class="container mx-auto bg-[#353739] md:mt-24 md:w-[1440px] text-[#D0D0CF] md:p-20"
     >
-      <div class="flex md:justify-between md:items-center md:flex-row flex-col p-12 justify-center items-center">
+      <div
+        class="flex md:justify-between md:items-center md:flex-row flex-col p-12 justify-center items-center"
+      >
         <div>
           <div class="md:m-12 flex justify-center items-center w-full md:block">
             <img src="images/stpeters2Img 2.png" alt="" />
@@ -386,7 +450,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
             auctor nibh eleifend sed lorem.
           </p>
           <!-- socials -->
-          <div class="flex gap-4 md:m-8 my-4 justify-center md:justify-start animate-bounce">
+          <div
+            class="flex gap-4 md:m-8 my-4 justify-center md:justify-start animate-bounce"
+          >
             <div
               class="rounded-full bg-[#61ADF8] w-6 h-6 flex justify-center items-center"
             >
