--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
         <img src="images/stpeters2Img 1.png" alt="" />
       </div>
       <div class="md:flex gap-4 text-[#214169] hidden">
-        <a class="hover:text-blue-500" href="#">Home</a>
-        <a class="hover:text-blue-500" href="#">Value</a>
-        <a class="hover:text-blue-500" href="#">About</a>
-        <a class="hover:text-blue-500" href="#">Services</a>
-        <a class="hover:text-blue-500" href="#">Contact</a>
+        <a class="hover:text-blue-500" href="#Home">Home</a>
+        <a class="hover:text-blue-500" href="#value">Value</a>
+        <a class="hover:text-blue-500" href="#about">About</a>
+        <a class="hover:text-blue-500" href="gallary.html">Gallary
+        <a class="hover:text-blue-500" href="#service">Services</a>
+        <a class="hover:text-blue-500" href="#contact">Contact</a>
       </div>
       <a href="#">
         <button
-          class="md:block border-none rounded-3xl p-2 bg-[#F6075F] text-white w-42 hidden"
+          class="md:block border-none rounded-3xl p-2 bg-[#F6075F] text-white w-46 hidden"
         >
           Book Now
         </button>
@@ -51,7 +52,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
 
     <!-- hero-section -->
     <div
-      class="container mx-auto flex md:flex-row flex-col bg-gradient-to-tr from-[#82D3FF] from-0% via-[#B6F8FF] via-49% to-[#61ADF8] to-100%"
+     id="Home" class="container mx-auto flex md:flex-row flex-col bg-gradient-to-tr from-[#82D3FF] from-0% via-[#B6F8FF] via-49% to-[#61ADF8] to-100%"
     >
       <div
         class="md:block self-center p-12 w-full md:flex-1 flex flex-col justify-center items-center"
@@ -86,7 +87,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     <!-- end of hero-section -->
 
     <!-- value-section -->
-    <div class="container mx-auto">
+    <div class="container mx-auto" id="value">
       <h1
         class="text-center amaranth-bold text-[#F6075F] font-normal md:text-6xl mt-20 text-[38px]"
       >
@@ -176,7 +177,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     <!-- end of value-section -->
     <!-- About-section -->
     <div
-      class="container mx-auto flex md:flex-row flex-col md:gap-16 md:mt-24 items-center"
+      class="container mx-auto flex md:flex-row flex-col md:gap-16 md:mt-24 items-center" id="about"
     >
       <!-- first-child -->
       <div class="md:p-0 p-10">
@@ -187,19 +188,20 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
         <h1 class="text-[#F6075F] md:text-[64px] text-[40px]">About Us</h1>
         <p class="text-[#61ADF8] amaranth-regular-italic">BrightLens</p>
         <h3 class="text-[#214169] text-[28px]">
-          Welcome to CareNest, a dedicated healthcare provider
+          Welcome to BrightLens, a dedicated healthcare provider
         </h3>
         <p class="font-normal text-[16px]">
-          At CareNest, we believe in delivering more than just medical services;
-          we’re here to create a supportive, healing environment where patients
-          and families feel valued and understood.
+          At BrightLens we believe in delivering more than just medical
+          services; we’re here to create a supportive, healing environment where
+          patients and families feel valued and understood.
         </p>
       </div>
     </div>
     <!-- end of about-section -->
+    
 
     <!-- service-section -->
-    <div class="container mx-auto md:mt-24 mt-4 md:p-0 p-12">
+    <div class="container mx-auto md:mt-24 mt-4 md:p-0 p-12" id="service">
       <div
         class="border-none flex bg-[#82D3FFE8] rounded-[35px] md:py-[20] justify-center items-center"
       >
@@ -211,51 +213,63 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
       <div
         class="grid md:grid-cols-3 lg:grid-cols-6 md:gap-4 md:mt-20 grid-cols-2 mt-10 gap-5"
       >
-        <div class="shadow-xl md:p-12 md:rounded-3xl">
+        <div class="shadow-xl md:p-4 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
+          <p
+            class="text-[#214169] text-center md:text-[18px] md:px-2 text-[12px] p-8 rounded"
+          >
             Comprehensive Eye Examination
           </p>
         </div>
-        <div class="shadow-xl md:p-12 md:rounded-3xl">
+        <div class="shadow-xl md:p-4 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
+          <p
+            class="text-[#214169] text-center md:text-[18px] md:px-2 text-[12px] p-8 rounded"
+          >
             Screening & Outreach Services
           </p>
         </div>
-        <div class="shadow-xl md:p-12 md:rounded-3xl">
+        <div class="shadow-xl md:p-4 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
+          <p
+            class="text-[#214169] text-center md:text-[18px] md:px-2 text-[12px] p-8 rounded"
+          >
             Management & Treatment of Eye Conditions
           </p>
         </div>
-        <div class="shadow-xl md:p-12 md:rounded-3xl">
+        <div class="shadow-xl md:p-4 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center md:px-2 text-[12px] rounded p-8">
+          <p
+            class="text-[#214169] text-center md:text-[18px] md:px-2 text-[12px] rounded p-8"
+          >
             Dispensing of Frames, Lens & Contact Lens
           </p>
         </div>
-        <div class="shadow-xl md:p-12 md:rounded-3xl">
+        <div class="shadow-xl md:p-4 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
+          <p
+            class="text-[#214169] text-center md:text-[18px] md:px-2 text-[12px] p-8 rounded"
+          >
             Refraction & DVLA Test
           </p>
         </div>
-        <div class="shadow-xl md:p-12 md:rounded-3xl">
+        <div class="shadow-xl md:p-4 md:rounded-3xl">
           <div class="flex justify-center">
             <img src="images/Siren.png" alt="" />
           </div>
-          <p class="text-[#214169] text-center md:px-2 text-[12px] p-8 rounded">
+          <p
+            class="text-[#214169] text-center md:text-[18px] md:px-2 text-[12px] p-8 rounded"
+          >
             Home & Corporate Services
           </p>
         </div>
@@ -335,7 +349,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     </div>
     <!-- end-of-book-session -->
     <!-- find us section -->
-    <div class="container mx-auto md:mt-24 md:mt-8 amaranth-bold mt-8">
+    <div class="container mx-auto md:mt-24 md:mt-8 amaranth-bold mt-8" id="contact">
       <h1 class="text-[#F6075F] md:text-[64px] text-[40px] text-center">
         Find Us Here
       </h1>
@@ -368,16 +382,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
         </div>
       </div>
       <div class="md:mt-20 flex items-center justify-center p-12">
-        <iframe
-          class="h-[505] rounded-3xl w-full"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15882.11339387063!2d-0.16861531725522427!3d5.6364025136193945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9b501278f4a5%3A0xca081548a0c20ffd!2sEast%20Legon%2C%20Accra!5e0!3m2!1sen!2sgh!4v1738187546425!5m2!1sen!2sgh"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.936764061002!2d-1.5828146770266458!3d6.654760277969295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb93f25c6c418b%3A0xf1a00b1c66eff63!2sChirapatre%20Estates%20Ashanti%20Region%2C%20Ghana!5e0!3m2!1sen!2sgh!4v1738284549886!5m2!1sen!2sgh" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
     <!-- end of find-us-section -->
