--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
         class="md:block self-center p-12 w-full md:flex-1 flex flex-col justify-center items-center"
       >
         <h1
-          class="amaranth-bold md:font-bold md:text-[50px] md:text-start text-center md:leading-12 text-[#214169] text-[32px] md:w-full text-center"
+          class="amaranth-bold md:font-bold md:text-[50px] md:text-start  md:leading-12 text-[#214169] text-[32px] md:w-full text-center"
         >
           Your Partner in Eye Care & Glasses
         </h1>
         <p
-          class="font-normal md:text-xl leading-6 md:mt-8 w-[520px] text-[16px] text-sm text-center w-full md:text-start"
+          class="font-normal md:text-xl leading-6 md:mt-8  text-[16px] text-sm text-center w-full md:text-start"
         >
           We are committed to providing you with the best eye care and glasses
           services to help your eye live healthier and happier.
@@ -349,7 +349,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     </div>
     <!-- end-of-book-session -->
     <!-- find us section -->
-    <div class="container mx-auto md:mt-24 md:mt-8 amaranth-bold mt-8" id="contact">
+    <div class="container mx-auto  md:mt-8 amaranth-bold mt-8" id="contact">
       <h1 class="text-[#F6075F] md:text-[64px] text-[40px] text-center">
         Find Us Here
       </h1>
