--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     </div>
 
     <div>
-      <a href="#">
+      <a href="https://form.jotform.com/250437160095554">
         <button class="border-none hidden md:block rounded-3xl p-2 bg-[#F6075F] text-white px-5">
           Book Now
         </button>
@@ -109,7 +109,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
         We are committed to providing you with the best eye care and glasses
         services to help your eye live healthier and happier.
       </p>
-      <a href="#">
+      <a href="https://form.jotform.com/250437160095554">
         <button class="border-none rounded-3xl p-2 bg-[#F6075F] text-white w-[187px] mt-8">
           Book A Session
         </button>
@@ -282,51 +282,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     </div>
     <!-- end-of-first-child -->
     <!-- second-child -->
-    <div class="md:py-10 p-12 self-center">
-      <p class="text-[20px] text-white">Talk to us</p>
-      <h3 class="amaranth-bold md:text-[64px] text-[#F6075F] text-[35px]">
-        Book A Session
-      </h3>
+    <div class="flex-1 w-1/2 h-60">
+  
       <!-- form -->
-      <form class="flex flex-col gap-5">
-        <div class="flex gap-4 md:flex-row flex-col">
-          <div class="flex-1">
-            <label class="text-[#214169]" for="">Name</label><br />
-            <input
-              class="border p-2 rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
-              type="text" />
-          </div>
-          <div class="flex-1">
-            <label class="text-[#214169]" for="">Phone Number</label>
-            <input
-              class="border p-2 rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
-              type="text" />
-          </div>
-        </div>
-        <div class="">
-          <label class="text-[#214169]" for="">Service</label><br />
-          <input
-            class="border p-2 rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
-            type="text" />
-        </div>
-        <div class="flex gap-4 ">
-          <div class="flex-1">
-            <label class="text-[#214169]" for="">Preferred Date</label><br />
-            <input
-              class="border p-2 rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
-              type="text" />
-          </div>
-          <div class="flex-1">
-            <label class="text-[#214169]" for="">Preferred Time</label>
-            <input
-              class="border p-2 rounded-lg border-black w-full bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%"
-              type="text" />
-          </div>
-        </div>
-        <button class="border-none rounded-3xl p-3 w-full bg-[#61ADF8] text-white">
-          Book Now
-        </button>
-      </form>
+      <iframe src="https://form.jotform.com/250437160095554" class="w-full h-auto" frameborder="0" width="" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       <!-- end of form -->
     </div>
     <!-- end-of second-child -->
