--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js
 https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
 " rel="stylesheet" />
 
- <style>
-  #sidebar {
-  transition: transform 0.3s ease-in-out;
-  transform: translateX(-100%);
-}
+  <style>
+    #sidebar {
+      transition: transform 0.3s ease-in-out;
+      transform: translateX(-100%);
+    }
 
-#sidebar:not(.hidden) {
-  transform: translateX(0);
-}
- </style>
+    #sidebar:not(.hidden) {
+      transform: translateX(0);
+    }
+  </style>
 </head>
 
 <body>
@@ -41,7 +41,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
     <span>Contact Us on 0548675717 / 0597908071</span> --------
     <span>Contact Us on 0548675717 / 0597908071</span> --------
     <span>Contact Us on 0548675717 / 0597908071</span> --------
-    <span>Contact Us on 0548675717 / 0597908071</span> 
+    <span>Contact Us on 0548675717 / 0597908071</span>
   </marquee>
   <!-- nav-bar -->
 
@@ -275,17 +275,18 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
 
   <!-- book-a-session -->
   <div
-    class="container mx-auto flex md:mt-24 mt-10 bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100%">
+    class="container mx-auto flex md:mt-24 mt-10 bg-gradient-to-tr from-[#82D3FF] from-100% via-[#B6F8FF] via-100% to-[#61ADF8] to-100% h-[900px] md:h-auto my-20 md:mt-">
     <!-- first-child -->
-    <div class="md:self-end md:block hidden">
+    <div class="md:self-end md:block hidden flex-1">
       <img src="images/32844d82-7977-4c85-a287-79886179d506_removalai_preview 1.png" alt="" />
     </div>
     <!-- end-of-first-child -->
     <!-- second-child -->
-    <div class="flex-1 w-1/2 h-60">
-  
+    <div class="flex-1 w-1/2 p-4 md:p-none">
+
       <!-- form -->
-      <iframe src="https://form.jotform.com/250437160095554" class="w-full h-auto" frameborder="0" width="" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://form.jotform.com/250437160095554" class="w-full h-full" frameborder="0" width=""
+        height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       <!-- end of form -->
     </div>
     <!-- end-of second-child -->
@@ -300,20 +301,14 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/css/splide.min.css
       <div class="flex gap-4 border border-[#61ADF8] items-center justify-center p-2 rounded-lg">
 
         <div>
-          <img src="images/Phone.png" alt="" />
-        </div>
-        <a href="tel:0597908071" class="text-[#61ADF8]">059-790-8071</a>
-      </div>
-      <div class="flex gap-4 border border-[#61ADF8] items-center justify-center p-2 rounded-lg">
-
-        <div>
           <img src="images/Location(1).png" alt="" />
         </div>
         <a href="tel:0597908071" class="text-[#61ADF8]">Chirapatre</a>
       </div>
       <div class="flex gap-4 border border-[#61ADF8] items-center justify-center p-2 rounded-lg">
-        <div>
+        <div class="inline-flex gap-3">
           <img src="images/ri_whatsapp-fill.png" alt="" />
+          <img src="images/Phone.png" alt="" />
         </div>
         <a href="https://wa.me/0548675717" class="text-[#61ADF8]">054-867-5717</a>
       </div>
